# explorer-net-backend-monorepo

./: .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
apps/api/: README.md  pyproject.toml
apps/api/src/api/: __main__.py  main.py
apps/api/src/api/controllers/: __init__.py  discovery.py
apps/api/src/api/routes/: authentication.py  consumer.py  discovery.py
apps/business/: .env.example  README.md  pyproject.toml  setup.py
apps/business/src/: __init__.py  __main__.py  main.py
apps/business/src/business/controllers/: __init__.py
apps/business/src/controllers/: client.py  menu.py  outlet.py  page.py
apps/business/src/routes/: __init__.py  client.py  menu.py  outlet.py  page.py
apps/consumer/: .env.example  README.md  pyproject.toml  setup.py
apps/consumer/src/: __main__.py  main.py
apps/consumer/src/consumer/: __init__.py  __main__.py
apps/consumer/src/consumer/controllers/: authentication.py  consumer.py
apps/consumer/src/consumer/routes/: __init__.py  authentication.py  consumer.py  discovery.py
apps/consumer/src/controllers/: authentication.py  consumer.py  discovery.py  user.py
apps/consumer/src/routes/: authentication.py  consumer.py  discovery.py  user.py
sql/: 1.structure.sql  2.data.sql
