[project]
name = "explorer-net-consumer-backend-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "business",
    "consumer",
]

[tool.uv.workspace]
members = [
    "packages/pylib",
    "apps/consumer",
    "apps/business",
]

[tool.uv.sources]
business = { workspace = true }
consumer = { workspace = true }

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pylint>=4.0.6",
]
